--- a/views/login.hbs
+++ b/views/login.hbs
@@ -2,7 +2,7 @@
     <div class="left-login wt-grid-item wt-hidden@p wt-visible@t size-6@t">
     </div>
     <div class="wt-grid-item size-12@p size-6@t wt-bg-white">
-        <div class="wt-grid-container wt-padding-large">
+        <div class="wt-grid-container wt-padding">
             <div class="wt-grid-item size-12@p size-12@t">
                 <a class="wt-color-primary wt-btn-with-icon" onclick="history.back()"><i
                         class="material-icons">arrow_back</i>BACK TO WEBSITE</a>
