updated login button

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -21,13 +21,15 @@
             </div>
             <div class="wt-grid-item size-12@p">
                 <div class="wt-text-align-right">
-                    <a class="wt-color-primary" onclick="openModal('forgotModal')">Forgot password</a>
+                    <a class="wt-color-primary" onclick="openModal('forgotModal')">Forgot password?</a>
                 </div>
             </div>
             <div class="wt-grid-item size-12@p">
-                <button class="wt-btn wt-btn-primary wt-btn-large wt-fullwidth"
-                href="./dashboard"
-                    onclick="">Login</button>
+                <a href="./patient_home">
+                    <button class="wt-btn wt-btn-primary wt-btn-large wt-fullwidth">
+                        Login
+                    </button>
+                </a>
             </div>
         </div>
     </div>
