UI done for clinician_patient_support_messages

--- a/public/assets/css/wt.css
+++ b/public/assets/css/wt.css
@@ -849,6 +849,14 @@ ul {
     text-align: center;
 }
 
+.wt-datatable th {
+    width: 100px;
+}
+
+.wt-datatable th+th {
+    width: auto;
+}
+
 #horizontal_scroll_card {
     box-shadow: none;
     border-radius: var(--border-radius);
