--- a/views/clinician_patient_support_messages.hbs
+++ b/views/clinician_patient_support_messages.hbs
@@ -1,61 +1,99 @@
 {{> clinician_sidebar}}
 {{> header}}
+
 <div class="panel-content">
+
+    {{!-- Back to dashboard and Heading --}}
     <div class="wt-grid-container">
-        <div class="wt-grid-item size-12@p size-9@t">
-            <a class="wt-color-primary wt-btn-with-icon" onclick="history.back()"><i
-                    class="material-icons">arrow_back</i>Back to dashboard</a>
+
+        {{!-- Back to dashboard Button --}}
+        <div class="wt-grid-item size-12@p size-12@t">
+            <a class="wt-color-primary wt-btn-with-icon" onclick="history.back()">
+                <i class="material-icons">arrow_back</i>Back to dashboard</a>
         </div>
+
+        {{!-- Patient's Profile Picture and Name --}}
         <div class="wt-grid-item size-12@p size-12@t">
             <div class="list-item">
                 <div class="list-item-avatar">
                     <img class="wt-border-rounded" src="./assets/img/patient_img.png" width="60px" alt="">
                 </div>
                 <div class="list-item-text">
-                    <h1>Jape Cooper</h1>
+                    <h1>Jane Cooper</h1>
                 </div>
+            </div>
+        </div>
+
+    </div>
+
+    {{!-- Individual Patient's Content --}}
+    <div class="patient_content">
+
+        {{!-- Mini Sidebar --}}
+        {{> clinician_patient_menu}}
+
+        {{!-- Support Messages --}}
+        <div class="wt-grid-container">
+
+            {{!-- Subheading: Support Messages --}}
+            <div class="wt-grid-item size-6@p size-8@t">
+                <h2>Support Messages</h2>
+            </div>
+
+            {{!-- Add Messsage Button --}}
+            <div class="wt-grid-item size-6@p size-4@t wt-text-align-right">
+                <button class="wt-btn wt-btn-secondary wt-btn-with-icon" onclick="openModal('addMessageModal')">
+                    <i class="material-icons">add</i> ADD MESSAGE</button>
+            </div>
+
+            {{!-- Fetch database data --}}
+            <div class="wt-grid-item size-12@p size-12@t">
+                <table class="wt-datatable">
+                    <th>Date</th>
+                    <th>Message</th>
+                    <tbody>
+                        {{!-- {{#each patientSuppMessRow}} --}}
+                        <tr>
+                            <td>09/01/2022</td>                             {{!-- {{date}} --}}
+                            <td>You've made it so far, don't give up!</td>  {{!-- {{message}} --}}
+                        </tr>
+                        <tr>
+                            <td>06/01/2022</td>
+                            <td>Think of the goal</td>
+                        </tr>
+                        {{!-- {{/each}} --}}
+                    </tbody>
+                </table>
             </div>
 
         </div>
     </div>
-    <div class="patient_content">
-        {{> clinician_patient_menu}}
-        <div class="wt-grid-container">
-            <div class="wt-grid-item size-12@p size-6@t">
-                clinician_patient_support_messages
-            </div>
-            <div class="wt-grid-item size-12@p size-6@t">
-                content
-            </div>
-        </div>
-    </div>
-    <div id="forgotModal" class="wt-modal">
+
+    {{!-- Add Message Modal --}}
+    <div id="addMessageModal" class="wt-modal">
         <div class="wt-modal-content">
-            <span class="wt-modal-close">&times;</span>
-            <div class="wt-grid-container">
-                <div class="wt-grid-item size-12@p size-12@t">
-                    <h2>Add Patient</h2>
-                    <p>Please enter the following details</p>
-                </div>
-                <div class="wt-grid-item size-12@p size-6@t">
-                    <label>First Name</label>
-                    <input type="text" />
-                </div>
-                <div class="wt-grid-item size-12@p size-6@t">
-                    <label>Last Name</label>
-                    <input type="text" />
-                </div>
-                <div class="wt-grid-item size-12@p size-12@t">
-                    <label>Bio</label>
-                    <textarea rows="5"></textarea>
-                </div>
-                <div class="wt-grid-item size-12@p">
-                    <div class="wt-text-align-right">
-                        <button class="wt-btn wt-btn-secondary">ADD PATIENT</button>
+            <form action="/clinician_patient_support_messages/addMessage" method="POST"></form>
+                <div class="wt-grid-container">
+
+                    {{!-- Heading --}}
+                    <div class="wt-grid-item size-6@p size-8@t">
+                        <h2>Add Support Message</h2>
                     </div>
+                    <div class="wt-grid-item size-6@p size-4@t wt-text-align-right">
+                        <span class="wt-modal-close">&times;</span>
+                    </div>
+
+                    {{!-- Text Area for Message --}}
+                    <div class="wt-grid-item size-12@t">
+                        <textarea placeholder="Enter messsage..." rows="5"></textarea>
+                    </div>
+                    
+                    {{!-- Save Button --}}
+                    <div class="wt-grid-item size-12@t wt-text-align-right">
+                        <button type="submit" class="wt-btn wt-btn-secondary">SEND</button>
+                    </div>
+
                 </div>
-                <div class="wt-grid-item size-12@p">
-                </div>
-            </div>
+            </form>
         </div>
     </div>
