--- a/views/clinician_patient_support_messages.hbs
+++ b/views/clinician_patient_support_messages.hbs
@@ -88,7 +88,7 @@
                         <textarea placeholder="Enter messsage..." rows="5"></textarea>
                     </div>
                     
-                    {{!-- Save Button --}}
+                    {{!-- Send Button --}}
                     <div class="wt-grid-item size-12@t wt-text-align-right">
                         <button type="submit" class="wt-btn wt-btn-secondary">SEND</button>
                     </div>
