--- a/views/clinician_patient_notes.hbs
+++ b/views/clinician_patient_notes.hbs
@@ -8,8 +8,8 @@
 
         {{!-- Back to dashboard Button --}}
         <div class="wt-grid-item size-12@p size-12@t">
-            <a class="wt-color-primary wt-btn-with-icon" onclick="history.back()"><i
-                    class="material-icons">arrow_back</i>Back to dashboard</a>
+            <a class="wt-color-primary wt-btn-with-icon" onclick="history.back()">
+                <i class="material-icons">arrow_back</i>Back to dashboard</a>
         </div>
 
         {{!-- Patient's Profile Picture and Name --}}
