edited spacings and paddings of clinician's individual patient view

--- a/views/clinician_patient_data.hbs
+++ b/views/clinician_patient_data.hbs
@@ -33,7 +33,7 @@
         {{> clinician_patient_menu}}
 
         {{!-- Health Data --}}
-        <div class="wt-grid-container">
+        <div class="wt-grid-container" style="padding: 35px">
 
             {{!-- Subheading: Health Data --}}
             <div class="wt-grid-item size-6@p size-8@t">
