--- a/views/clinician_patient_notes.hbs
+++ b/views/clinician_patient_notes.hbs
@@ -33,7 +33,7 @@
         {{> clinician_patient_menu}}
 
         {{!-- Clinical Notes --}}
-        <div class="wt-grid-container">
+        <div class="wt-grid-container" style="padding: 35px">
             
             {{!-- Subheading: Clinical Notes --}}
             <div class="wt-grid-item size-6@p size-8@t">
