--- a/views/clinician_patient_profile.hbs
+++ b/views/clinician_patient_profile.hbs
@@ -33,7 +33,7 @@
         {{> clinician_patient_menu}}
 
         {{!-- Profile --}}
-        <div class="wt-grid-container">
+        <div class="wt-grid-container" style="padding: 35px">
 
             {{!-- Subheading: Profile --}}
             <div class="wt-grid-item size-12@p size-12@t">
@@ -44,8 +44,8 @@
             <div class="wt-grid-item size-12@p size-12@t">
                 <div class="wt-card">
                     <div class="wt-card-content">
-                        <div class="wt-grid-container">
 
+                        <div class="wt-grid-container">
                             <div class="wt-grid-item size-half@t"></div>
                             <div class="wt-grid-item size-12@p size-5@t">
                                 <label>Given Name(s)</label>
@@ -60,8 +60,9 @@
                                     Cooper
                                 </div>
                             </div>
-                            <div class="wt-grid-item size-half@t"></div>
+                        </div>
 
+                        <div class="wt-grid-container">
                             <div class="wt-grid-item size-half@t"></div>
                             <div class="wt-grid-item size-12@p size-5@t">
                                 <label>Screen Name</label>
@@ -76,8 +77,9 @@
                                     janecooper135@gmail.com
                                 </div>
                             </div>
-                            <div class="wt-grid-item size-half@t"></div>
+                        </div>
 
+                        <div class="wt-grid-container">
                             <div class="wt-grid-item size-half@t"></div>
                             <div class="wt-grid-item size-12@p size-5@t">
                                 <label>Date of Birth</label>
@@ -85,9 +87,9 @@
                                     05/12/2000
                                 </div>
                             </div>
-                            <div class="wt-grid-item size-6@t"></div>
-                            <div class="wt-grid-item size-half@t"></div>
+                        </div>
 
+                        <div class="wt-grid-container">
                             <div class="wt-grid-item size-half@t"></div>
                             <div class="wt-grid-item size-11@p size-11@t">
                                 <label>Bio</label>
@@ -95,10 +97,10 @@
                                     Patient's bio. Have a history of ..., tends to ...
                                 </div>
                             </div>
-
-                            <div class="wt-grid-item size-12@p"></div>
-
                         </div>
+
+                        <div class="wt-grid-item size-12@p"></div>
+                        
                     </div>
                 </div>
             </div>
