--- a/views/clinician_patient_support_messages.hbs
+++ b/views/clinician_patient_support_messages.hbs
@@ -33,7 +33,7 @@
         {{> clinician_patient_menu}}
 
         {{!-- Support Messages --}}
-        <div class="wt-grid-container">
+        <div class="wt-grid-container" style="padding: 35px">
 
             {{!-- Subheading: Support Messages --}}
             <div class="wt-grid-item size-6@p size-8@t">
