--- a/views/clinician_dashboard.hbs
+++ b/views/clinician_dashboard.hbs
@@ -54,7 +54,7 @@
                         <div class="wt-grid-item size-2@t">
 
                             <a href="./clinician_patient_data">
-                                {{firstName}} {{lastName}}
+                                {{givenName}} {{familyName}}
                             </a>
                         </div>
                         <div class="wt-grid-item size-2@t">
@@ -93,11 +93,11 @@
                     </div>
                     <div class="wt-grid-item size-6@t">
                         <label>Given Name</label>
-                        <input name="firstName" type="text" />
+                        <input name="givenName" type="text" />
                     </div>
                     <div class="wt-grid-item size-6@t">
                         <label>Family Name</label>
-                        <input name="lastName" type="text" />
+                        <input name="familyName" type="text" />
                     </div>
                     <div class="wt-grid-item size-6@t">
                         <label>Email</label>
