--- a/views/clinician_profile.hbs
+++ b/views/clinician_profile.hbs
@@ -3,8 +3,8 @@
     <div class="wt-grid-container">
 
         {{!-- Profile Picture --}}
-        <div class="wt-grid-item size-5@t" id="display_flex_center">
-            <div class="wt-grid-item size-12@t" id="display_flex_center">
+        <div class="wt-grid-item size-5@t display_flex_center">
+            <div class="wt-grid-item size-12@t display_flex_center">
                 <img class="wt-border-circle" src="/assets/img/doctor.jpg" id="clinician_img" width="180px" height="180px" style="cursor: pointer;" onclick="openModal('UpdateProfilePictureModal')">
             </div>
             <div class="wt-grid-item size-12@t" style="">
@@ -14,7 +14,7 @@
         </div>
 
         {{!-- Bio Box --}}
-        <div class="wt-grid-item size-7@t" id="display_flex_center">
+        <div class="wt-grid-item size-7@t display_flex_center">
             <div class="wt-card" style="height: 90%; width: 90% ">
                 <div class="wt-grid-item size-12@t" style="height: 100%">
                     <div class="wt-grid-container" style="padding: 5px;">
@@ -26,9 +26,10 @@
                         </div>
                     </div>
                     <div class="wt-grid-item size-12@t" style="padding: 5px;">
-                        <div class ="wt-card" id="vertical_scroll_card" style="height: 70px; padding:15px">
+                        <input readonly type="text" value="text here"/>
+                        {{!-- <div class ="wt-card" id="vertical_scroll_card" style="height: 70px; padding:15px">
                             Bio here. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                        </div>
+                        </div> --}}
                     </div>
                 </div>
             </div>
@@ -47,35 +48,40 @@
                         </div>
                         <div class="wt-grid-item size-5@t">
                             <label>Email</label>
-                            <div class="wt-card" id="horizontal_scroll_card">
+                            <input readonly type="text" value="text here"/>
+                            {{!-- <div class="wt-card" id="horizontal_scroll_card">
                                 Text here. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                            </div>
+                            </div> --}}
                         </div>
                         <div class="wt-grid-item size-half@t"></div>
                         <div class="wt-grid-item size-6@t">
                             <label>Address</label>
-                            <div class="wt-card" id="horizontal_scroll_card">
+                            <input readonly type="text" value="text here"/>
+                            {{!-- <div class="wt-card" id="horizontal_scroll_card">
                                 Text here. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                            </div>
+                            </div> --}}
                         </div>
                         <div class="wt-grid-item size-5@t">
                             <label>Contact Number</label>
-                            <div class="wt-card" id="horizontal_scroll_card">
+                            <input readonly type="text" value="text here"/>
+                            {{!-- <div class="wt-card" id="horizontal_scroll_card">
                                 Text here. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                            </div>
+                            </div> --}}
                         </div>
                         <div class="wt-grid-item size-half@t"></div>
                         <div class="wt-grid-item size-3@t">
                             <label>City/Suburb</label>
-                            <div class="wt-card" id="horizontal_scroll_card">
+                            <input readonly type="text" value="text here"/>
+                            {{!-- <div class="wt-card" id="horizontal_scroll_card">
                                 Text here. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                            </div>
+                            </div> --}}
                         </div>
                         <div class="wt-grid-item size-3@t">
                             <label>State</label>
-                            <div class="wt-card" id="horizontal_scroll_card">
+                            <input readonly type="text" value="text here"/>
+                            {{!-- <div class="wt-card" id="horizontal_scroll_card">
                                 Text here. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                            </div>
+                            </div> --}}
                         </div>
                         <div class="wt-grid-item size-half@t"></div>
                         {{!-- <div class="wt-grid-item size-3@t">
@@ -86,22 +92,25 @@
                         </div> --}}
                         <div class="wt-grid-item size-5@t">
                             <label>Year of Birth</label>
-                            <div class="wt-card" id="horizontal_scroll_card">
+                            <input readonly type="text" value="text here"/>
+                            {{!-- <div class="wt-card" id="horizontal_scroll_card">
                                 Text here. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                            </div>
+                            </div> --}}
                         </div>
                         <div class="wt-grid-item size-half@t"></div>
                         <div class="wt-grid-item size-3@t">
                             <label>Country</label>
-                            <div class="wt-card" id="horizontal_scroll_card">
+                            <input readonly type="text" value="text here"/>
+                            {{!-- <div class="wt-card" id="horizontal_scroll_card">
                                 Text here Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                            </div>
+                            </div> --}}
                         </div>
                         <div class="wt-grid-item size-3@t">
                             <label>Postcode</label>
-                            <div class="wt-card" id="horizontal_scroll_card">
+                            <input readonly type="text" value="text here"/>
+                            {{!-- <div class="wt-card" id="horizontal_scroll_card">
                                 Text here. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                            </div>
+                            </div> --}}
                         </div>
                         <div class="wt-grid-item size-half@t"></div>
                     </div>
@@ -124,11 +133,11 @@
                         <div class="wt-grid-item size-5@t"></div>
                         <div class="wt-grid-item size-6@t">
                             <label>Given Name/s</label>
-                            <input name = "fullName" type="text" />
+                            <input name = "givenName" type="text" />
                         </div>
                         <div class="wt-grid-item size-6@t">
                             <label>Family Name</label>
-                            <input name = "fullName" type="text" />
+                            <input name = "familyName" type="text" />
                         </div>
                         <div class="wt-grid-item size-9@t">
                             <label>Headline</label>
