Updated the icons in patient_sidebar

--- a/views/patient_home.hbs
+++ b/views/patient_home.hbs
@@ -4,7 +4,7 @@
     <div class="wt-grid-container">
         <div class="wt-grid-item size-12@p size-9@t">
             <h1>Welcome back 👋</h1>
-            <p>jane Cooper</p>
+            <p>Pat</p>
         </div>
 
         <div class="wt-grid-item size-12@p size-10@t">
